--- a/npcs/Cleric Subclasses.yml
+++ b/npcs/Cleric Subclasses.yml
@@ -209,3 +209,53 @@
                         damage to the target. When you reach 14th level, the extra damage increases to 2d8
        - Improved Reaper: when you cast a necromancy spell of 1st through 5th level that targets only one creature, the spell can instead target two creatures within range and within 5 feet of each other. If the spell 
                           consumes its material components, you must provide them for each target.
+                          
+                          
+                          
+   - - Knowledge Domain Abilities: 
+       - Spellcasting: Spell DC 15
+          1st Level: Command, Identify
+          3rd Level: Augury, Suggestion
+          5th Level: Nondetection, Speak with Dead
+          7th Level: Arcane Eye, Confusion
+          9th Level: 	Legend Lore, Scrying
+       - Blessing of Knowledge: you learn two languages of your choice. You also become proficient in your choice of two of the following skills: Arcana, History, Nature, or Religion. Your proficiency bonus is doubled for any 
+                                ability check you make that uses either of those skills.
+       - Channel Divinity:
+         - Knowledge of Ages: you can use your Channel Divinity to tap into a divine well of knowledge. As an action, you choose one skill or tool. For 10 minutes, you have proficiency with the chosen skill or tool.
+         - Read Thoughts: you can use your Channel Divinity to read a creature's thoughts. You can then use your access to the creature's mind to command it. As an action, choose one creature that you can see within 60 feet of 
+                          you. That creature must make a Wisdom saving throw. If the creature succeeds on the saving throw, you can't use this feature on it again until you finish a long rest. If the creature fails its save, 
+                          you can read its surface thoughts (those foremost in its mind, reflecting its current emotions and what it is actively thinking about) when it is within 60 feet of you. This effect lasts for 1 minute. 
+                          During that time, you can use your action to end this effect and cast the Suggestion spell on the creature without expending a spell slot. The target automatically fails its saving throw against the 
+                          spell.
+         - Potent Spellcasting: you add your Wisdom modifier to the damage you deal with any cleric cantrip.
+         - Visions of the Past: you can call up visions of the past that relate to an object you hold or your immediate surroundings. You spend at least 1 minute in meditation and prayer, then receive dreamlike, shadowy glimpses
+                                of recent events. You can meditate in this way for a number of minutes equal to your Wisdom score and must maintain concentration during that time, as if you were casting a spell. Once you use 
+                                this feature, you can't use it again until you finish a short or long rest. Object Reading. Holding an object as you meditate, you can see visions of the object's previous owner. After meditating 
+                                for 1 minute, you learn how the owner acquired and lost the object, as well as the most recent significant event involving the object and that owner. If the object was owned by another creature in
+                                the recent past (within a number of days equal to your Wisdom score), you can spend 1 additional minute for each owner to learn the same information about that creature. Area Reading. As you 
+                                meditate, you see visions of recent events in your immediate vicinity (a room, street, tunnel, clearing, or the like, up to a 50-foot cube), going back a number of days equal to your Wisdom score.
+                                For each minute you meditate, you learn about one significant event, beginning with the most recent. Significant events typically involve powerful emotions, such as battles and betrayals, 
+                                marriages and murders, births and funerals. However, they might also include more mundane events that are nevertheless important in your current situation.
+
+
+
+   - - Peace Domain Abilities:
+       - Spellcasting: Spell DC 13 
+         1st Level: Heroism, Sanctuary
+         3rd Level: Aid, Warding Bond
+         5th Level: Beacon of Hope, Sending
+         7th Level: Aura of Purity, Resilient Sphere
+         9th Level: Greater Restoration, Telepathic Bond
+       - Emboldening Bond: you can forge an empowering bond among people who are at peace with one another. As an action, you choose a number of willing creatures within 30 feet of you (this can include yourself) equal to your
+                           proficiency bonus. You create a magical bond among them for 10 minutes or until you use this feature again. While any bonded creature is within 30 feet of another, the creature can roll a d4 and add
+                           the number rolled to an attack roll, an ability check, or a saving throw it makes. Each creature can add the d4 no more than once per turn. You can use this feature a number of times equal to your
+                           proficiency bonus, and you regain all expended uses when you finish a long rest.
+       - Channel Divinity: 
+         - Balm of Peace: you can use your Channel Divinity to make your very presence a soothing balm. As an action, you can move up to your speed, without provoking opportunity attacks, and when you move within 5 feet of any
+                          other creature during this action, you can restore a number of hit points to that creature equal to 2d6 + your Wisdom modifier (minimum of 1 hit point). A creature can receive this healing only once
+                          whenever you take this action. 
+       - Protective Bond: the bond you forge between people helps them protect each other. When a creature affected by your Emboldening Bond feature is about to take damage, a second bonded creature within 30 feet of the first
+                          can use its reaction to teleport to an unoccupied space within 5 feet of the first creature. The second creature then takes all the damage instead. 
+       - Potent Spellcasting: you add your Wisdom modifier to the damage you deal with any cleric cantrip.
+       - Expansive Bond: the benefits of your Emboldening Bond and Protective Bond features now work when the creatures are within 60 feet of each other. Moreover, when a creature uses Protective Bond to take someone else's damage, the creature has resistance to that damage.
