--- a/npcs/Druid Subclasses.yml
+++ b/npcs/Druid Subclasses.yml
@@ -81,3 +81,54 @@
                            cube or starts its turn there, that creature takes your Halo of Spores damage, unless the creature succeeds on a Constitution saving throw against your spell save DC. A creature can take this damage 
                            no more than once per turn. While the cube of spores persists, you can't use your Halo of Spores reaction.
        - Fungal Body: the fungal spores in your body alter you: you can't be blinded, deafened, frightened, or poisoned, and any critical hit against you counts as a normal hit instead, unless you're incapacitated.
+       
+       
+       
+   - - Circle of Land Abilities:
+       - Chosen Land:
+       - Spellcasting: Spell DC
+         - Arctic:
+         - 3rd Level: Hold Person, Spike Growth
+         - 5th Level: Sleet Storm, Slow
+         - 7th Level: Freedom of Movement, Ice Storm
+         - 9th Level: Commune with Nature, Cone of Cold
+         - Coast:
+         - 3rd Level: Mirror Image, Misty Step
+         - 5th Level: Water Breathing, Water Walk
+         - 7th Level: Control Water, Freedom of Movement
+         - 9th Level: Conjure Elemental, Scrying
+         - Desert:
+         - 3rd Level: Blur, Silence
+         - 5th Level: Create Food and Water, Protection from Energy
+         - 7th Level: Blight, Hallucinatory Terrain
+         - 9th Level: Insect Plague, Wall of Stone
+         - Forest:
+         - 3rd Level: Barkskin, Spider Climb
+         - 5th Level: Call Lightning, Plant Growth
+         - 7th Level: Divination, Freedom of Movement
+         - 9th Level: Commune with Nature, Tree Stride
+         - Grassland:
+         - 3rd Level: Invisibility, Pass without Trace
+         - 5th Level: Daylight, Haste
+         - 7th Level: Divination, Freedom of Movement
+         - 9th Level: Dream, Insect Plague
+         - Mountain:
+         - 3rd Level: Spider Climb, Spike Growth
+         - 5th Level: Lightning Bolt, Meld into Stone
+         - 7th Level: Stone Shape, Stoneskin
+         - 9th Level: Passwall, Wall of Stone
+         - Swamp:
+         - 3rd Level: Acid Arrow, Darkness
+         - 5th Level: Water Walk, Stinking Cloud
+         - 7th Level: Freedom of Movement, Locate Creature
+         - 9th Level: Insect Plague, Scrying
+       - Bonus Cantrip: you learn one additional druid cantrip of your choice.
+       - Natural Recovery: you can regain some of your magical energy by sitting in meditation and communing with Nature. During a Short Rest, you choose expended Spell Slots to recover. The Spell Slots can have a combined level
+                           that is equal to or less than half your druid level (rounded up), and none of the slots can be 6th level or higher. You can’t use this feature again until you finish a Long Rest. For example, when you 
+                           are a 4th-level druid, you can recover up to two levels worth of Spell Slots. You can recover either a 2nd-level slot or two 1st-level slots.
+       - Lands Stride: moving through nonmagical Difficult Terrain costs you no extra Movement. You can also pass through nonmagical Plants without being slowed by them and without taking damage from them if they have thorns, 
+                       spines, or a similar hazard. In addition, you have advantage on Saving Throws against Plants that are magically created or manipulated to impede Movement, such those created by the Entangle spell.
+       - Natures Ward: you can’t be Charmed or Frightened by Elementals or fey, and you are immune to poison and disease.
+       - Natures Sanctuary: creatures of the natural world sense your connection to Nature and become hesitant to Attack you. When a beast or plant creature attacks you, that creature must make a Wisdom saving throw against your
+                            druid spell save DC. On a failed save, the creature must choose a different target, or the Attack automatically misses. On a successful save, the creature is immune to this Effect for 24 hours. The 
+                            creature is aware of this Effect before it makes its Attack against you.
