--- a/npcs/Monk Subclasses.yml
+++ b/npcs/Monk Subclasses.yml
@@ -28,4 +28,29 @@
        - Mushin: You reach the pinnacle of the Way of the Empty Mind. You gain the following benefits;
                  - your Wisdon score increases by 2 up to a maximum of 22
                  - If you use Empty Mind Techniques against a target that already has disadvantage on attack rolls, you automatically succeed on the contested check
-                 In addition, when you roll for initiative or as an action, you can spend 8 Ki Points to gain the effects of the Foresight spell for a duration of 10 minutes, once per long rest                 
+                 In addition, when you roll for initiative or as an action, you can spend 8 Ki Points to gain the effects of the Foresight spell for a duration of 10 minutes, once per long rest   
+
+
+
+   - - Way of Shadows Abilities:
+       - Shadow Arts: you can use your ki to duplicate the effects of certain spells. As an action, you can spend 2 ki points to cast Darkness, Darkvision, Pass without Trace, or Silence, without providing material components.
+                      Additionally, you gain the Minor Illusion cantrip if you don't already know it
+       - Shadow Step: you gain the ability to step from one shadow into another. When you are in dim light or darkness, as a bonus action you can teleport up to 60 feet to an unoccupied space you can see that is also in dim
+                      light or darkness. You then have advantage on the first melee attack you make before the end of the turn  
+       - Cloak of Shadows: you have learned to become one with the shadows. When you are in an area of dim light or darkness, you can use your action to become invisible. You remain invisible until you make an attack, cast a 
+                           spell, or are in an area of bright light.
+       - Opportunist: you can exploit a creature's momentary distraction when it is hit by an attack. Whenever a creature within 5 feet of you is hit by an attack made by a creature other than you, you can use your reaction to
+                      make a melee attack against that creature.                      
+                      
+                      
+                      
+   - - Way of the Iron Mountain Abilities:
+       - Iron Mountain Technique: Whenever using Patient Defense or Step of the Wind can choose one of the following effects:
+           - you have resistance to all forms of damage other than psychic damage until the start of your next turn
+           - you gains a bonus to your AC equal to your strength modifier until the start of your next turn
+           - you have advantage on ability checks and saving throws to resist being grappled, restrained, forcebly moved or knocked prone           
+       - Fists of Steel: When making an unarmed strike, your unarmed damage die increases to s d8. The die becomes at d10 at 11th Level and a d12 at 17th Level. Can choose to deal slashing, piercing or blugeoning damage with 
+                         unarmed strikes 
+       - Iron Body: Whenever you are hit by a melee attack, you can use a reaction and spend 1 Ki point to reduce an attacks damage by 1d10 + your constitution modifier plus half your monk level. If damaged is reduced to 0, can 
+                    make an unarmed melee attack on the attacking crature if its in range
+       - Body Conditioning: you have prepaired your body for peak performance. Your Strength, Dexterity and Constitution scores increase by 2. Additionally, your maximum for those score increases to 22. 
