--- a/npcs/Shaman Subclasses.yml
+++ b/npcs/Shaman Subclasses.yml
@@ -13,3 +13,21 @@
        - Conduit of Creation: you have forged a direct connection with the life-essence of th world round you. When you are forced to make a death saving throw at the start of your turn, you caninstead spring back to your feet 
                               with a surge of healing energy. You immediately gain hit points equal to half of your maximum hit points and then you stand up if you so choose. A number of creatures of your choice equal to your 
                               Wisdom modifer that are within 30 feet of you regain hit points equad to 2d10 + your Wisdom Modifier. You can use his ability once per long rest.
+                              
+                              
+                              
+   - - Path of the Spirit Abilities:
+       - Spiritual Guide:  you are bestowed a spirit guide to help you progress further. The spirit guide takes on the incorporeal form of your totem spirit. Starting when you choose this path at 3rd level, your Spirit Guide
+                           appears by your side. The Spirit Guide is the embodiment of the Spirit World for you. It cannot be seen by anyone else by non-magical means, but it can see and hear others as you would. The Spirit
+                           guide communicates and interacts with the shaman as a conscious being. The spirit guide grants the shaman advantage to initiative rolls, can’t be surprised while conscious, and other creatures don’t
+                           gain advantage on attack rolls against you as a result of being hidden from you.
+       - Ghost Touch: any weapon that you touch deals damage normally against any incorporeal creature regardless of its resistance to that damage type. This feature lasts as long as the shaman holds the weapon. The shaman also
+                      gains resistance to melee attacks from incorporeal creatures e.g. ghosts, shadows, wraiths, will-o’-wisp, specters
+       - Spiritual Focus: you can give the spirit guide the task of concentrating on a spell or spell-like ability that is maintained through concentration. The shaman can act normally while his spirit guide concentrates on the
+                          spell. If the shaman casts another spell that requires concentration, then the first spell effect ends and the second spell begins. The shaman can choose the spirit guide to concentrate on any
+                          subsequent spells cast. A spirit guide can concentrate on only one spell at a time. A spirit guide does not have to make Concentration checks for circumstances such as the shaman taking damage. The
+                          spirit guide is not present for anyone to interrupt or otherwise interact. If the shaman falls unconscious or dies, then the spirit guide stops concentrating on the spell, and the spell’s effect ends.
+       - Spirit Journey: a spirit shaman knows how to vanish bodily into the Spirit World. As an Action, a shaman can become incorporeal and move through other creatures and objects as if they were difficult terrain. He takes
+                         1d10 force damage if he ends his turn inside an object. While incorporeal, the shaman does not invoke attacks of opportunity. Outside of combat, the shaman can spend time in prayer and meditation to
+                         commune directly with other spirits in the Spirit World to attempt receive information concerning their current quest. The shaman can ask three questions that can be answers with a yes or no. While in
+                         meditation, the shaman’s soul is in the Spirit World, and cannot communicate with others in the Natural world
