--- a/npcs/Fighter Subclasses.yml
+++ b/npcs/Fighter Subclasses.yml
@@ -134,3 +134,38 @@
        - Superior Critical: your weapon attacks score a critical hit on a roll of 18-20.
        - Survivor: you attain the pinnacle of resilience in battle. At the start of each of your turns, you regain hit points equal to 5 + your Constitution modifier if you have no more than half of your hit points left. You 
                    don't gain this benefit if you have 0 hit points.
+                   
+                   
+                   
+   - - Gunslinger Traits:
+       - Firearm Proficiency: you gain proficiency with firearms, allowing you to add your proficiency bonus to attacks made with firearms.
+       - Gunsmith: you gain proficiency with Tinker’s Tools. You may use them to craft ammunition at half the cost, repair damaged firearms, or even draft and create new ones (DM’s discretion). Some extremely experimental and 
+                   intricate firearms are only available through crafting.
+       - Adept Marksman: you learn to perform powerful Trick Shots to disable or damage your opponents using your firearms. Trick Shots. You learn two trick shots of your choice. Many maneuvers enhance an attack in some way. 
+                         Each use of a trick shot must be declared before the attack roll is made. You can use only one trick shot per attack. You learn an additional trick shot of your choice at 7th, 10th, 15th, and 18th level.
+                         Each time you learn a new trick shot, you can also replace one trick shot you know with a different one. Grit. You gain a number of grit points equal to your Wisdom modifier (minimum of 1). You regain 1 
+                         expended grit point each time you roll a 20 on the d20 roll for an attack with a firearm, or deal a killing blow with a firearm to a creature of significant threat (DM’s discretion). You regain all 
+                         expended grit points after a short or long rest. Saving Throws. Some of your trick shots require your targets to make a saving throw to resist the trick shot’s effects. The saving throw DC is calculated 
+                         as follows; Trick shot save DC = 8 + your proficiency bonus + your Dexterity modifier
+       - Quickdraw: you add your proficiency bonus to your initiative. You can also stow a firearm, then draw another firearm as a single object interaction on your turn.
+       - Rapid Repair: you learn how to quickly attempt to fix a jammed gun. You can spend a grit point to attempt to repair a misfired (but not broken) firearm as a bonus action
+       - Lightning Reload: you can reload any firearm as a bonus action
+       - Vicious Intent: your firearm attacks score a critical hit on a roll of 19-20, and you regain a grit point on a roll of 19 or 20 on a d20 attack roll.
+       - Hemorrhaging Critical: whenever you score a critical hit on an attack with a firearm, the target additionally suffers half of the damage from the attack at the end of its next turn.
+       - Trick Shots:
+         - Bullying Shot: You can use the powerful blast and thundering sound of your firearm to shake the resolve of a creature. You can expend one grit point while making a Charisma (Intimidation) check to gain advantage on 
+                          the roll.
+         - Dazing Shot: When you make a firearm attack against a creature, you can expend one grit point to attempt to dizzy your opponent. On a hit, the creature suffers normal damage and must make a Constitution saving throw 
+                        or suffer disadvantage on attacks until the end of their next turn.
+         - Deadeye Shot: When you make a firearm attack against a creature, you can expend one grit point to gain advantage on the attack roll.
+         - Disarming Shot: When you make a firearm attack against a creature, you can expend one grit point to attempt to shoot an object from their hands. On a hit, the creature suffers normal damage and must succeed on a 
+                           Strength saving throw or drop 1 held object of your choice and have that object be pushed 10 feet away from you.
+         - Forceful Shot: When you make a firearm attack against a creature, you can expend one grit point to attempt to trip them up and force them back. On a hit, the creature suffers normal damage and must succeed on a 
+                          Strength saving throw or be pushed 15 feet away from you.
+         - Piercing Shot: When you make a firearm attack against a creature, you can expend one grit point to attempt to fire through multiple opponents. The initial attack gains a +1 to the firearm’s misfire score. On a hit, 
+                          the creature suffers normal damage and you make an attack roll with disadvantage against every creature in a line directly behind the target within your first range increment. Only the initial attack 
+                          can misfire.
+         - Violent Shot: When you make a firearm attack against a creature, you can expend one or more grit points to enhance the volatility of the attack. For each grit point expended, the attack gains a +2 to the firearm’s 
+                         misfire score. If the attack hits, you can roll one additional weapon damage die per grit point spent when determining the damage.
+         - Winging Shot: When you make a firearm attack against a creature, you can expend one grit point to attempt to topple a moving target. On a hit, the creature suffers normal damage and must make a Strength saving throw 
+                         or be knocked prone.       
