--- a/npcs/Paladin Subclasses.yml
+++ b/npcs/Paladin Subclasses.yml
@@ -95,3 +95,27 @@
                         - Once on each of your turns when you make a weapon attack and miss, you can cause that attack to hit instead.
                         - If you fail a saving throw, you can use your reaction to reroll it. You must use this new roll.
                         Once you use this feature, you can’t use it again until you finish a long rest, unless you expend a 5th-level spell slot to use it again.
+                        
+                        
+                        
+   - - Oathbreaker Abilities:
+       - Spellcasting: Spell DC
+         3rd Level: Hellish Rebuke, Inflict Wounds
+         5th Level: Crown of Madness, Darkness
+         9th Level: Animate Dead, Bestow Curse
+         13th Level: Blight, Confusion 
+         17th Level: Contagion, Dominate Person
+       - Channel Divinity: you gain the following 2 Channel Divinity options
+         - Control Undead: As an action, you target one undead creature you can see within 30 feet of you. The target must make a Wisdom saving throw. On a failed save, the target must obey your commands for the next 24 hours, 
+                           or until you use this Channel Divinity option again. An undead whose challenge rating is equal to or greater than your paladin level is immune to this effect.
+         - Dreadful Aspect: As an action, you channel the darkest emotions and focus them into a burst of magical menace. Each creature of your choice within 30 feet of you must make a Wisdom saving throw if it can see you. On a
+                            failed save, the target is frightened of you for 1 minute. If a creature frightened by this effect ends its turn more than 30 feet away from you, it can attempt another Wisdom saving throw to end the 
+                            effect on it.
+       - Aura of Hate: you as well any fiends and undead within 10 feet of you, gain a bonus to melee weapon damage rolls equal to your Charisma modifier (+x). A creature can benefit from this feature from only one
+                       paladin at a time.
+       - Supernatural Resistance: you gain resistance to bludgeoning, piercing, and slashing damage from nonmagical weapons 
+       - Dread Lord: you can, as an action, surround yourself with an aura of gloom that lasts for 1 minute. The aura reduces any bright light in a 30-foot radius around you to dim light. Whenever an enemy that is frightened by
+                     you starts its turn in the aura, it takes 4d10 psychic damage. Additionally, you and any creatures of your choosing in the aura are draped in deeper shadow. Creatures that rely on sight have disadvantage on
+                     attack rolls against creatures draped in this shadow. While the aura lasts, you can use a bonus action on your turn to cause the shadows in the aura to attack one creature. Make a melee spell attack against
+                     the target. If the attack hits, the target takes necrotic damage equal to 3d10 + your Charisma modifier. After activating the aura, you can't do so again until you finish a long rest.        
+  
