--- a/npcs/Warlock Subclasses.yml
+++ b/npcs/Warlock Subclasses.yml
@@ -83,16 +83,22 @@
              3rd Level: Blink, Elemental Weapon
              4th Level: Phantasmal Killer, Staggering Smite
              5th Level: Banishing Smite, Cone of Cold      
-       - Hexblades Curse: Gain a bonus to damage rolls against the cursed target equal to his proficiency bonus. Any attack roll he makes against the cursed target is a critical hit on a roll of 19 or 20 on the d20.
-                          If the cursed target dies, he regains 6Hp
-       - Hex Warrior: When using his Pact Weapon, he can use Charisma for Attack and Damage rolls
-       - Accursed Specter: can curse the soul of a person he slays, temporarily binding it in his service. When he slays a humanoid, he can cause its spirit to rise from its corpse as a specter. When the specter appears, 
-                           it gains temporary hit points equal to half his warlock level. Roll initiative for the specter, which has its own turns. It obeys his verbal commands, and it gains a special bonus to its attack 
-                           rolls equal to his Charisma modifier 
-       - Armor of Hexes: your hex grows more powerful. If the target cursed by your Hexblade’s Curse hits you with an attack roll, you can use your reaction to roll a d6. On a 4 or higher, the attack instead misses you, 
-                         regardless of its roll.
-       - Master of Hexes: you can spread your Hexblade's Curse from a slain creature to another creature. When the creature cursed by your Hexblade's Curse dies, you can apply the curse to a different creature you can see within
-                          30 feet of you, provided you aren't incapacitated. When you apply the curse in this way, you don't regain hit points from the death of the previously cursed creature.
+        - Hexblades Curse: you gain the ability to place a baleful curse on someone. As a bonus action, choose one creature you can see within 30 feet of you. The target is cursed for 1 minute. The curse ends early if the target
+                           dies, you die, or you are incapacitated. Until the curse ends, you gain the following benefits - 
+                           - You gain a bonus to damage rolls against the cursed target. The bonus equals your proficiency bonus.
+                           - Any attack roll you make against the cursed target is a critical hit on a roll of 19 or 20 on the d20.
+                           - If the cursed target dies, you regain hit points equal to your warlock level + your Charisma modifier
+        - Hex Warriors: You gain proficiency with medium armor, shields, and martial weapons. The influence of your patron also allows you to mystically channel your will through a particular weapon. Whenever you finish a long 
+                        rest, you can touch one weapon that you are proficient with and that lacks the two-handed property. When you attack with that weapon, you can use your Charisma modifier, instead of Strength or Dexterity,
+                        for the attack and damage rolls. This benefit lasts until you finish a long rest. If you later gain the Pact of the Blade feature, this benefit extends to every pact weapon you conjure with that feature,
+                        no matter the weapon's type.
+        - Accursed Specter:  you can curse the soul of a person you slay, temporarily binding it in your service. When you slay a humanoid, you can cause its spirit to rise from its corpse as a specter. When the specter appears,
+                             it gains temporary hit points equal to half your warlock level. Roll initiative for the specter, which has its own turns. It obeys your verbal commands, and it gains a special bonus to its attack 
+                             rolls equal to your Charisma modifier (minimum of +0). The specter remains in your service until the end of your next long rest, at which point it vanishes to the afterlife
+        - Armor of Hexes: your hex grows more powerful. If the target cursed by your Hexblade’s Curse hits you with an attack roll, you can use your reaction to roll a d6. On a 4 or higher, the attack instead misses you, 
+                          regardless of its roll
+        - Master of Hexes: you can spread your Hexblade's Curse from a slain creature to another creature. When the creature cursed by your Hexblade's Curse dies, you can apply the curse to a different creature you can see 
+                           within 30 feet of you, provided you aren't incapacitated. When you apply the curse in this way, you don't regain hit points from the death of the previously cursed creature
                           
                           
                           
@@ -115,3 +121,23 @@
                             an action, you and the raven return to normal.
        - Ravens Shield: the Raven Queen grants you a protective blessing. You gain advantage on death saving throws, immunity to the frightened condition, and resistance to necrotic damage.
        - Queens Right Hand: you can channel the Raven Queen’s power to slay a creature. You can cast Finger of Death. After you cast the spell with this feature, you can’t do so again until you finish a long rest.
+       
+       
+       
+   - - Pact of The Great Old One Abilities:
+         - Expanded Spell List:
+            1st Level: Dissonant Whispers, Hideous Laughter
+            2nd Level: Detect Thoughts, Phantasmal Force
+            3rd Level: Clairvoyance, Sending
+            4th Level: Dominate Beast, Black Tentacles
+            5th Level: Dominate Person, Telekinesis
+         - Awakened Mind: your alien knowledge gives you the ability to touch the minds of other creatures. You can telepathically speak to any creature you can see within 30 feet of you. You don't need to share a language with
+                          the creature for it to understand your telepathic utterances, but the creature must be able to understand at least one language
+         - Entropis Ward: you learn to magically ward yourself against attack and to turn an enemy's failed strike into good luck for yourself. When a creature makes an attack roll against you, you can use your reaction to
+                          impose disadvantage on that roll. If the attack misses you, your next attack roll against the creature has advantage if you make it before the end of your next turn. Once you use this feature, you can't
+                          use it again until you finish a short or long rest 
+         - Thought Shield: your thoughts can't be read by telepathy or other means unless you allow it. You also have resistance to psychic damage, and whenever a creature deals psychic damage to you, that creature takes the 
+                           same amount of damage that you do.
+         - Create Thrall: you gain the ability to infect a humanoid's mind with the alien magic of your patron. You can use your action to touch an incapacitated humanoid. That creature is then charmed by you until a Remove 
+                          Curse spell is cast on it, the charmed condition is removed from it, or you use this feature again. You can communicate telepathically with the charmed creature as long as the two of you are on the 
+                          same plane of existence.
